# otus-cpp

./: .clang-format  BaseObject_8h.html  BaseObject_8h__dep__incl.map  BaseObject_8h__dep__incl.md5  BaseObject_8h__incl.map  BaseObject_8h__incl.md5  BaseObject_8h_source.html  DocumentController_8cpp.html  DocumentController_8cpp__incl.map  DocumentController_8cpp__incl.md5  DocumentController_8h.html  DocumentController_8h__dep__incl.map  DocumentController_8h__dep__incl.md5  DocumentController_8h__incl.map  DocumentController_8h__incl.md5  DocumentController_8h_source.html  Document_8cpp.html  Document_8cpp__incl.map  Document_8cpp__incl.md5  Document_8h.html  Document_8h__dep__incl.map  Document_8h__dep__incl.md5  Document_8h__incl.map  Document_8h__incl.md5  Document_8h_source.html  DuplicateFileFinder_8cpp.html  DuplicateFileFinder_8cpp__incl.map  DuplicateFileFinder_8cpp__incl.md5  DuplicateFileFinder_8h.html  DuplicateFileFinder_8h__dep__incl.map  DuplicateFileFinder_8h__dep__incl.md5  DuplicateFileFinder_8h__incl.map  DuplicateFileFinder_8h__incl.md5  DuplicateFileFinder_8h_source.html  EditorController_8cpp.html  EditorController_8cpp__incl.map  EditorController_8cpp__incl.md5  EditorController_8h.html  EditorController_8h__dep__incl.map  EditorController_8h__dep__incl.md5  (+276 more)
.github/workflows/: documentation.yml  release.yml
allocator/: CMakeLists.txt  allocator.cpp  main.cpp
allocator/src/: allocator.h  list.h
build_farm/: .gitignore  main.cpp
build_farm/.github/workflows/: release.yml
duplicate_file_finder/: CMakeLists.txt  Doxyfile  main.cpp
duplicate_file_finder/src/: InputData.cpp  InputData.h
duplicate_file_finder/src/DuplicateFileFinder/: DuplicateFileFinder.cpp  DuplicateFileFinder.h
duplicate_file_finder/src/InputData/: InputData.cpp  InputData.h  ParseException.h
editor/: CMakeLists.txt  Doxyfile  main.cpp
editor/src/controller/: DocumentController.cpp  DocumentController.h  EditorController.cpp  EditorController.h  IDocumentController.h  IDocumentController_fwd.h  IEditorController.h  IEditorController_fwd.h
editor/src/model/: BaseObject.h  Document.cpp  Document.h  IDocument.h  IDocument_fwd.h  IObject.h  IObject_fwd.h  ISerializer.h  JSONSerializer.cpp  JSONSerializer.h  ObjectFactory.cpp  ObjectFactory.h  ObjectType.h  UUID.h
editor/src/view/: EditorView.cpp  EditorView.h  ObjectView.cpp  ObjectView.h
ip_filter/: CMakeLists.txt  ip_filter.cpp
ip_filter/src/: ip_list.cpp  ip_list.h
ip_filter/tests/: ip_filter_tests.cpp
matrix/: CMakeLists.txt  Doxyfile  main.cpp
matrix/src/: Matrix.h
multithreading/: CMakeLists.txt  Doxyfile
multithreading/src/block/: Block.h
package_command_parser/: CMakeLists.txt  Doxyfile  main.cpp
package_command_parser/src/block/: Block.h
package_command_parser/src/controller/: PackageController.cpp  PackageController.h
package_command_parser/src/logger/: Logger.h
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_9.js  functions_b.js  (+3 more)
sfinae/: CMakeLists.txt  Doxyfile  main.cpp
